view/common.css
html {
    width: 100%;
}

body {
    margin: 0;
    padding: 0;
    padding-top: 90px;
    display: block;
    background-color: rgb(134, 234, 204);
}

#header {
    background: rgb(0, 188, 179);
    margin: 0;
    position: fixed;
    width: 100%;
    height: 90px;
    top: 0;
}

.hidden {
    /* Important makes this display override any other display values */
    display: none !important;
}

.divider {
    margin-bottom: 0;
    padding-bottom: 0;
    text-align: center;
    color: rgb(148,113,113);
}

#user-title {
    margin: 0;
    position: fixed;
    right: 20px;
}

#nav {
    display: block;
    list-style-type: none;
    margin-top: 10px;
    right: 20px;
    position: fixed;
}

#nav ul {
    margin: 0px;
}

#nav li {
    display: inline;
}

.button {
    /*button links*/
    color: rgb(211, 230, 251);
    background: rgb(58, 198, 66);
    margin: 5px;
    padding: 10px;
    text-decoration: none;
    border: 2px solid black;
}

.button:focut {
    outline: none;
}

.button:hover {
    color: red;
}

#container {
    /*display: inline-block;*/
    width: 400px;
    height: 15%;
    border-radius: 25px;
    padding: 30px 30px 80px 30px;
    background-color: white;
    margin: 100px auto 0px auto;
}

#container h2 {
    white-space: nowrap;
}

.entry {
    text-align: center;
    background-color: red;
    width: 400px;
    height: 15%;
    border-radius: 25px;
    padding: 30px 30px 60px 30px;
    background-color: white;
    margin: 50px auto 0px auto;
}

.entry {
    text-align: left;
}

.entry h4 {
    margin-top: 0px;
}

.entry-title {
    text-decoration: none;
    color: rgb(0,152,5);
}

.entry-title:hover {
    color: red;
}

.entry p {
    margin: 0;
}

.error {
    text-align: center;
}

#login-title {
    font-family: cursive;
    text-align: center;
}

.media {
    max-width: 350px;
}

#search-content {
    display: block;
    margin: 20px auto;
    position: relative;
    left: -10px;
    text-align: center;
    width: 350px;
}

#search-bar {
    /* set search icon */
    background-image: url("/Flint/view/resources/search-icon.png");
    background-position: 5px 6px;
    background-repeat: no-repeat;
    background-size: 15px 15px;
    padding-left: 25px;       /* move actual search to the side of the icon */
    width: 60%;
    margin: auto;
    background-color: white;
    border: none;
    position: relative;
    transition: all 0.4s ease-in-out;
}

#search-bar:focus {
    left: 0px;
    width: inherit;
}

#previous-searches {
    visibility: hidden;         /* start out hidden */
    opacity: 0;
    height: 0px;                /* prevent searches from blocking 
                                   the page when inactive */
    width: inherit;             /* same width as search bar */
    list-style-type: none;      /* no bullets */
    background-color: #f6f6f6;
    margin: 0;
    margin-left: 30px;         /* left to account for search icon */
    padding: 0px;
    text-align: center;
    transition: all 0.4s;       /* for opacity */
    border-radius: 5px;         /* make it look nice */
    overflow: hidden;           /* hide the part outside the radius */
}

#search-bar:focus ~ #previous-searches {
    /* when search bar is focused, change previous-searches */
    opacity: 1;
    visibility: visible;
    height: auto;
}

.search-item {
    width: inherit;
    display: block;
    margin: -1px;               /* get rid of double borders */
    padding: 0px;               /* make borders go all the way to left/right */
    border-top: 1px solid black;/* just the top */
}

.search-item > a {
    display: block;             /* make link take up entire li */
    text-decoration: none;
    color: rgb(0,152,5);
    margin: auto;
    padding: 10px 0px;          /* add space between links */
}

.search-item > a:hover {
    background-color: rgb(197,236,223);
}

#prev-search-arrow {
    /* display connecting arrow to drop-down menu */
    visibility: 0;
    opacity: 0;
    transition: all 0.4s;       /* same as search items */
    margin: 0 auto;
    /* make position relative so it can be moved to center of previous-searches,
       not the search bar itself */
    position: relative;
    left: 30px;
    /* Make transparent block with left/right borders to cut the bottom 
       border into triangle shape */
    width: 0;
    height: 0;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-bottom: 10px solid #f6f6f6;
}

#search-bar:focus ~ #prev-search-arrow {
    /* when search bar is focused, change previous-searches */
    opacity: 1;
    visibility: visible;
}


input {
    font-family: cursive;
    margin: 7px;
    display: inline-block;
    background-color: rgb(134, 234, 204);
    border: none;
    padding: 5px 10px;
}

table {
    position: relative;
    top: 0;
    left: 0;
    margin: auto;
    border-collapse: collapse;
}

th {
    font-family: cursive;
    border-top: solid 5px black;
    margin: -10px;
    padding: -10px;
    font-size: 150%;
    background: rgb(6,151,14);
}

td {
    text-align: center;
    background: rgb(71, 218, 145);
}

